# ElevatorScheduling

./: CMakeLists.txt  README.md  main.cpp
include/: DefaultSetting.h  Dispatcher.h  Elevator.h  ElevatorSystem.h  IWorkTask.h  Log.h  Person.h  RetCode.h  WorkQueue.h  WorkTask.h
include/common/: DCI.h  Singleton.h  nocopyable.h
include/elevator/: Elevator.h  ElevatorInstruction.h  ElevatorManager.h  ElevatorState.h  ElevatorWorkTask.h
include/layer/: Layer.h  LayerManager.h  LayerState.h  LayerWorkTask.h
include/person/: Person.h  ProduceStrategy.h  Producer.h
include/producer/: ProduceStrategy.h  Producer.h
include/scheduler/: Scheduler.h  Strategy.h
test/: test_.cpp
